--- a/jobsnatch2/templates/interview.html
+++ b/jobsnatch2/templates/interview.html
@@ -57,9 +57,9 @@
         <form action="{% url 'train' %}" method="post" onsubmit="cli()"> 
           {% csrf_token %}
           <label for="uname">Name : </label>
-          <input type="text" value="{{user.username}}" name="uname" style="border-radius:7px;margin-left:6%; border:none;text-align:center;width:fit-content;"><br><br>
+          <input type="text" value="{{user.username}}" name="uname" style="border-radius:7px;margin-left:6%; border:none;text-align:center;width:fit-content;" disabled><br><br>
           <label for="ititle">Type : </label>
-          <input type="text"  name="type" value="Interview" style="border-radius:7px;margin-left:6%;border:none;text-align:center;width:fit-content;"><br><br>
+          <input type="text"  name="type" value="Interview" style="border-radius:7px;margin-left:6%;border:none;text-align:center;width:fit-content;" disabled><br><br>
           <label for="pday">Day : </label>
           <input type="date" placeholder="Prefered day" name="pday" style="border-radius:7px;margin-left:6%;border:none;text-align:center;" required>
           <br><br>
