--- a/jobsnatch2/templates/avljobs.html
+++ b/jobsnatch2/templates/avljobs.html
@@ -119,7 +119,7 @@
           </table>
           </div>
           <div style="padding: 10%; margin-left:75%;margin-top:-15%;width:70%;">
-            <button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:80px;font-weight:bold;color:white;border:none" type="submit" id="try2">View More</button>
+            <button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:80px;font-weight:bold;color:white;border:none" type="submit" id="try2" name="btn">View More</button>
             <input type="text" name="cmpid" value="{{ i.job_id}}" hidden>
           </div>
       </form>
