--- a/jobsnatch2/templates/base4.html
+++ b/jobsnatch2/templates/base4.html
@@ -107,7 +107,7 @@ div.content {
 <div class="sidebar">
     <a href="{% url 'company'%}" class="active" style="text-decoration: none;">Dashboard</a>
     <a href="{% url 'jobpost'%}" id="try">Post Job</a>
-    <a href="{% url 'avlcandidates'%}">Available Candidates</a>
+    <a href="{% url 'avlcandidates'%}" id="alca">Available Candidates</a>
     <a href="{% url 'acceptedcan'%}">Accepted Candidates</a>
     <a href="{% url 'compoffer'%}">Candidates</a>
     <a href="{% url 'inadd'%}">Add Internship</a>
