--- a/jobsnatch2/templates/company.html
+++ b/jobsnatch2/templates/company.html
@@ -215,7 +215,7 @@
                         <a href="{% url 'reset_password' %}" class="forgot-pass" >Change Password</a>
                         <div class="row">
                           <div class="col d-flex justify-content-end">
-                            <button class="btn btn-primary" type="submit" onclick="myFunction3()">Save Changes</button>
+                            <button class="btn btn-primary" type="submit" name="bt" onclick="myFunction3()">Save Changes</button>
                           </div>
                           <script>
                             function myFunction3() {
