--- a/jobsnatch2/templates/compoffer.html
+++ b/jobsnatch2/templates/compoffer.html
@@ -59,7 +59,7 @@
               </div>
               <div style="padding: 10%; margin-top:-24%;width:70%;float:left;margin-left:55%;">
                 <input type="hidden" name="canid" value="{{ i.id}}">
-                <button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:100px;font-weight:bold;color:white;border:none" type="submit">View</button>
+                <button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:100px;font-weight:bold;color:white;border:none" id="btn1" type="submit">View</button>
               </div>
           </form>
         </div>
