--- a/jobsnatch2/templates/offercan.html
+++ b/jobsnatch2/templates/offercan.html
@@ -52,7 +52,7 @@
                         {% csrf_token %}
                         <input type="text" name="canid" value="{{x.id}}" hidden>
                         <input type="text" name="comid" value="{{user.id}}" hidden>
-                        <button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:fit-content;font-weight:bold;color:white;border:none" type="submit" onclick="myFunction()">Offer Job</button>
+                        <button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:fit-content;font-weight:bold;color:white;border:none" type="submit" id="btn2" onclick="myFunction()">Offer Job</button>
                       </form>
                     <!-- <div style="margin-left:8%;margin-top:-3%">
                         <form method="post" action="#">
