--- a/jobsnatch2/templates/acceptedcan.html
+++ b/jobsnatch2/templates/acceptedcan.html
@@ -32,7 +32,7 @@
         
       }
       </style>
-    <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+    <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));overflow-x: hidden;">
        <!-- <h1 style="color: black; text-align:center">Accepted Candidates :</h1> -->
        
        
