--- a/jobsnatch2/templates/acceptedcom.html
+++ b/jobsnatch2/templates/acceptedcom.html
@@ -18,8 +18,8 @@
     background-color: #ffffff;
   }
   </style>
-<body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));background-repeat:no-repeat">
-  <br>
+<body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));background-repeat:no-repeat;overflow-x: hidden;">
+  <br><br>
 <h1 style="color: black; text-align:center;margin-left:14%;">Hi {{user.username}}, Companies that accepted your requests</h1>
 <!-- <form method="post">
   {% csrf_token %}
