--- a/jobsnatch2/templates/base.html
+++ b/jobsnatch2/templates/base.html
@@ -129,8 +129,9 @@ div.content {
         <div class="dropdown">
           <button class="dropbtn">Resume</button>
           <div class="dropdown-content">
-            <a href="{% url 'res' %}" style="text-decoration: none;">View-Resume</a>
+            <a href="{% url 'resno' %}" style="text-decoration: none;">View-Resume</a>      
             <a href="{% url 'resdetails' %}" style="text-decoration: none;">Enter-Details</a>              
+                    
             
           </div>
         </div>
