--- a/jobsnatch2/templates/gd.html
+++ b/jobsnatch2/templates/gd.html
@@ -26,9 +26,10 @@
         
       }
 </style>
-<body>
+<body style="overflow-x: hidden;">
     <!-- <h1 style="color: black; text-align:center">Hi {{user.username}}, The companies that accepted your requests are :</h1> -->
     <br>
+    <div style="width:100%;">
     <div style="height: 38%;width:42%;float:left;background-image: linear-gradient(to right, rgb(0, 0, 0),rgba(104, 101, 101, 0.395));margin-top:26%;margin-left:2%;border-radius:10px;border-top-right-radius: 50px;border-bottom-left-radius: 50px;">
         <a href="https://youtu.be/3w32jIsRlsw"><img src="{% static 'images/gd1.jpg' %}"  style="margin-left:7%;margin-top:0.1%;border-radius:5px;" width="459" height="226"></a>
     </div>
@@ -138,8 +139,8 @@
                     </form>
                 
             
+ </div>
 </div>
-
 </body>
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
