--- a/jobsnatch2/templates/interview.html
+++ b/jobsnatch2/templates/interview.html
@@ -26,7 +26,8 @@
       }
     
 </style>
-<body>
+<body style="overflow-x: hidden;">
+  <div style="width:100%;">
     <!-- <h1 style="color: black; text-align:center">Hi {{user.username}}, The companies that accepted your requests are :</h1> -->
    <div style="height: 36%;width:32%;float:left;background-color:rgba(108, 188, 200, 0.623);margin-top:27%;margin-left:0.5%;border-radius:10px;border-top-right-radius: 50px;border-bottom-left-radius: 50px;">
     <div style="width:42%;position: absolute;left:0;top:65%;margin-left:2%;"> 
@@ -122,6 +123,7 @@
                 <li>Certificate of completion</li>
             </ul></p>
    
+ </div>
 </div>
 </body>
 
