--- a/jobsnatch2/templates/appliedjobs.html
+++ b/jobsnatch2/templates/appliedjobs.html
@@ -19,7 +19,7 @@
    </style>
 {% extends 'base.html'%}
 {% block content %}
-    <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));background-repeat:no-repeat">
+    <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));background-repeat:no-repeat;overflow-x: hidden;">
       <br>
     <h1 style="color: black; text-align:center;margin-left:15%;">Hi {{user.username}}, Jobs that you applied for</h1>
   {% for y in data1 %}
@@ -29,6 +29,8 @@
           {% if user.cat == y.cat %}
         
               <br>
+  <div style="height: fit-content;background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));background-repeat:no-repeat;width:100%;padding:1%;">
+
               <div style="height: 35%; width:60%;background-color:rgba(234, 234, 234, 0.58);border-radius:10px;margin-left: 28%;padding-left:2%;padding-top:2%;">
                 <div class="d-flex justify-content-center align-items-center rounded" style="height: 110px;width:110px;">
                   {% if x.images %}
@@ -54,7 +56,7 @@
                         </div>
                     </form>
               </div>
-              
+  </div>
               <br>
           {% endif %} 
       {% endif %} 
