--- a/jobsnatch2/templates/interinfo.html
+++ b/jobsnatch2/templates/interinfo.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsde2qlivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body style="overflow-x: hidden;">
 <section class="bg-light">
-    <div class="container">
+    <div class="container ">
         <div class="row">
             <div class="col-lg-12 mb-4 mb-sm-5">
                 <div class="card card-style1 border-0">
@@ -72,8 +72,6 @@
             
             {% endfor %}  
             </div>
-        </div>
-    </div>
 </section>
 
 <style type="text/css">
