--- a/jobsnatch2/templates/acceptedcan.html
+++ b/jobsnatch2/templates/acceptedcan.html
@@ -37,7 +37,7 @@
        
        
        <br><br><br><br>
-       
+       <div style="width: 100%;">
          {% for i in data %}
               {% if user.cat == i.cat %}
          
@@ -85,7 +85,7 @@
         </div>
         {% endif %}
       {% endfor %}
-      
+      </div>
     </body>
     {% endblock %}
 </html>
