--- a/jobsnatch2/templates/inadd.html
+++ b/jobsnatch2/templates/inadd.html
@@ -76,9 +76,10 @@ input[type=submit]:hover {
 body {margin:0;font-family:Arial}
 </style>
 </head>
-<body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+<body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));overflow-x: hidden;">
     <center>
       <br><br><br><br>
+      <div style="width: 100%;">
         <div style="background-color:rgba(255, 255, 255, 0.373);align-items:center;width:60%;padding:3%;border-radius:10px;margin-left:15%;">
          <h2>Add New Internships</h2><br>
          <table>
@@ -145,6 +146,7 @@ body {margin:0;font-family:Arial}
              </tr>
           </form>
          </table>
+       </div>
        </div>
      </center>
      <script>
