--- a/jobsnatch2/templates/progress.html
+++ b/jobsnatch2/templates/progress.html
@@ -53,6 +53,7 @@
   </style>
 <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));"> 
   <br><br>
+ <div style="width: 100%;">
   <h1 style="margin-left:40%; margin-top: 0%;">Know your progress here</h1>
  <table>
   <th>Company</th>
@@ -93,7 +94,8 @@
   
  {% endfor %}
    
-</table>
+ </table>
+</div>
 </body>
 {% endblock %}
 
