--- a/jobsnatch2/templates/resdetails.html
+++ b/jobsnatch2/templates/resdetails.html
@@ -41,8 +41,9 @@
 </style>
  
  
-  <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+  <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));overflow-x: hidden;">
     <br><br>
+    <div style="width: 100%;">
     <div style="width: 80%;margin-left:18%;">
     <div class="container mt-5 mb-5">
       <div class="card">
@@ -553,8 +554,7 @@
               </div>
           </div>
       </div>
-
-      
+    </div>
     </body>
     <script>
       (function(){
