--- a/jobsnatch2/templates/activity.html
+++ b/jobsnatch2/templates/activity.html
@@ -62,8 +62,9 @@
         align-items: center;
      }
   </style>
-  <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+  <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));overflow-x: hidden;">
     <br><br><br><br>
+    <div style="width: 100%;">
     {% for x in acti %}
         <div class="container mt-3 homedi homed"  style="background-color: rgba(255, 255, 255, 0.187);"><p style="text-align: center;margin-top:5%;">Training</p>
             <div class="card " style="background-color: rgba(255, 255, 255, 0.644); margin-top:5%;text-align:center;">
@@ -138,7 +139,7 @@
             </div>
         </div>
    {% endfor %}
-
+  </div>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
