--- a/jobsnatch2/templates/company.html
+++ b/jobsnatch2/templates/company.html
@@ -83,11 +83,11 @@
     }
         
           </style>
- <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">   
-
-    <h1 style="text-align:center;font-family: 'Franklin Gothic Medium', Arial Narrow, 'Arial', sans-serif;font-weight: bolder; margin-top: -2%;"> PROFILE </h1>
+ <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));overflow-x: hidden;">   
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <div class="container" style="width: 84%;float:right;">
+    <div class="container" style="width: 84%;float:right;margin-top: -5%;">
+    <h1 style="text-align:center;font-family: 'Franklin Gothic Medium', Arial Narrow, 'Arial', sans-serif;font-weight: bolder;"> PROFILE </h1>
+
     <div class="row flex-lg-nowrap">
      
       <div class="col">
