--- a/jobsnatch2/templates/notifications.html
+++ b/jobsnatch2/templates/notifications.html
@@ -146,7 +146,8 @@
             
           }
           </style>
-          <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+          <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));overflow-x: hidden;">
+           <div style="width:100%;">
             <div class="topnav" id="myTopnav" style="width:1500px;margin-top:-10">
                 <a href="{% url 'company'%}" class="active">DASH</a>
                 <a href="{% url 'jobpost'%}">Post Job</a>
@@ -162,7 +163,7 @@
              
             </div>
             <div style="text-align:center;background-color:rgba(255, 255, 255, 0.392);margin-top:5%;border-radius:10px;width:37%;height:50%;margin-left:1%;">
-              
+             
               <h2 style="font-family:Arial, Helvetica, sans-serif;">CONFIRMED DATES</h2>
               <table style="margin-left: 2%;">
                 <th style="text-align: center;">Candidate</th>
@@ -189,7 +190,7 @@
                 {% endfor %}
               </table>
             </div>
-            <div style="text-align:center;background-color:rgba(255, 255, 255, 0.392);margin-top:5%;border-radius:10px;width:60%;height:50%;float:right;margin-top:-22.5%;margin-right:1%;">
+            <div style="text-align:center;background-color:rgba(255, 255, 255, 0.392);margin-top:5%;border-radius:10px;width:60%;height:50%;float:right;margin-top:-23%;margin-right:1%;">
               <h2 style="font-family:Arial, Helvetica, sans-serif;">PREFERED DATES</h2>
               <table style="width:90%;margin-left: 5%;">
                <th style="text-align: center;">Candidate</th>
@@ -220,7 +221,7 @@
                 {% endfor %}
               </table>
             </div>
-
+    </div>
             <script>
             function myFunction() {
               alert("Date approved and Scheduled confirmed of slotted date");
